Change justify-content property of the production sections and the font color of the member class

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container-team">
                 <div class="member"><img src="./Risorse/man_working(1).jpg" alt="A man working on a laptop"><h4>Bill</h4>Social Media Manager</div>
                 <div class="member"><img src="./Risorse/map.jpg" alt="A man lost"><h4>Rudy</h4>Stoner</div>
-                <div class="member"><img src="./Risorse/women_sitting.jpg" alt="A woman with her legs crossed"><h4>Samantha</h4>Hot Chick</div>
+                <div class="member"><img src="./Risorse/women_sitting.jpg" alt="A blonde woman"><h4>Samantha</h4>Press Agency</div>
             </div>
         </section>
     </main>
